# 2mpp-drf-webinar

./: Dockerfile  docker-compose.yml  pyproject.toml
profiles/profiles/: settings.py  urls.py
profiles/profiles_api/: models.py  serializers.py  urls.py  views.py
profiles/profiles_api/migrations/: 0001_user_model.py
